--- a/serial/Makefile
+++ b/serial/Makefile
@@ -1,6 +1,6 @@
 
 compil:
-	g++ -mcpu=neoverse-512tvb -O3 -fopenmp -funroll-loops -ftree-vectorize -finline-functions -I/tools/acfl/24.10/armpl-24.10.1_AmazonLinux-2_gcc/include -larmpl -L/tools/acfl/24.10/armpl-24.10.1_AmazonLinux-2_gcc/lib -larmpl_mp -lamath -lm -g -fno-omit-frame-pointer BSM.cxx -o tested_program.exe
+	g++ -mcpu=neoverse-512tvb -O3 -fopenmp -funroll-all-loops -ffinite-math-only -funsafe-math-optimizations -fno-math-errno -ftree-vectorize -finline-functions -I/tools/acfl/24.10/armpl-24.10.1_AmazonLinux-2_gcc/include -larmpl -L/tools/acfl/24.10/armpl-24.10.1_AmazonLinux-2_gcc/lib -larmpl_mp -lamath -lm -g -fno-omit-frame-pointer BSM.cxx -o tested_program.exe
 
 armclang:
 	armclang++ -mcpu=neoverse-512tvb -O3 -fopenmp -funroll-loops -fvectorize -finline-functions -armpl -lamath -lm -g -fno-omit-frame-pointer BSM.cxx -o tested_program.exe
@@ -10,5 +10,11 @@ run:
 
 maqao:
 	sbatch start.sh
+
+maqao_onethread:
+	sbatch start_maq1.sh
+
+maqao_mid:
+	sbatch start_maqmid.sh
 
 .PHONY: compil run maqao
