Enhanced streams handling and fixed launch scripts
It appears that the scripts did not allow the program to run in parallel, it was stuck using a single core ; the MAQAO execution is still stuck on a single core and I've no idea how to fix it so we can't profile thread placement and stuff like that ><

--- a/serial/Makefile
+++ b/serial/Makefile
@@ -1,6 +1,9 @@
 
 compil:
-	g++ -mcpu=neoverse-512tvb -O3 -fopenmp -funroll-all-loops -ffinite-math-only -funsafe-math-optimizations -fno-math-errno -ftree-vectorize -finline-functions -I/tools/acfl/24.10/armpl-24.10.1_AmazonLinux-2_gcc/include -larmpl -L/tools/acfl/24.10/armpl-24.10.1_AmazonLinux-2_gcc/lib -larmpl_mp -lamath -lm -g -fno-omit-frame-pointer BSM.cxx -o tested_program.exe
+	g++ -mcpu=neoverse-512tvb -O3 -fopenmp -funroll-all-loops -ffinite-math-only -funsafe-math-optimizations -fno-math-errno -ftree-vectorize -finline-functions -flto -I/tools/acfl/24.10/armpl-24.10.1_AmazonLinux-2_gcc/include -larmpl -L/tools/acfl/24.10/armpl-24.10.1_AmazonLinux-2_gcc/lib -larmpl_mp -lamath -lm -g -fno-omit-frame-pointer BSM.cxx -o tested_program.exe
+
+no_omp:
+	g++ -mcpu=neoverse-512tvb -O3 -funroll-all-loops -ffinite-math-only -funsafe-math-optimizations -fno-math-errno -ftree-vectorize -finline-functions -flto -I/tools/acfl/24.10/armpl-24.10.1_AmazonLinux-2_gcc/include -larmpl -L/tools/acfl/24.10/armpl-24.10.1_AmazonLinux-2_gcc/lib -larmpl_mp -lamath -lm -g -fno-omit-frame-pointer BSM.cxx -o tested_program.exe
 
 armclang:
 	armclang++ -mcpu=neoverse-512tvb -O3 -fopenmp -funroll-loops -fvectorize -finline-functions -armpl -lamath -lm -g -fno-omit-frame-pointer BSM.cxx -o tested_program.exe
